# mdtbx

./: .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .typos.toml  CLAUDE.md  Dockerfile  README.md  TODO.md  pacsmd.mdp  pixi.toml  pyproject.toml  reference.bib
.claude/skills/new-subcmd/: SKILL.md  template.py
example/cv/: comdist.sh  comvec.sh  contactmap.sh  densmap.sh  distmap.sh  mindist.sh  pca.sh  pca_pymol.sh  rmsd.sh  rmsf.sh  xyz.sh
example/gen_distres/: run.sh
example/gen_modres/: CGX.mol2  resp.sh
example/gen_resp/: run.sh
example/mbar/: calc_dg_points_mbar.py  calc_dg_points_mbar.sh  calc_mbar.py  plot_mbar.py  run_mbar.sh
example/mdp/membrane/: README.md  awh_dih.mdp  awh_dist.mdp  eq3.mdp  eq4.mdp  eq6.mdp  pacsmd.mdp  prd.mdp  re.mdp  tremd.mdp  us_dih.mdp  us_dist.mdp
example/mdp/solution/: awh_dih.mdp  awh_dist.mdp  eq6.mdp  pacsmd.mdp  prd.mdp  prd_fltbtmr.mdp  re.mdp  tremd.mdp  us.mdp  us_dih.mdp
example/mdrun/: README.md  gridtest_cpu_pjm.sh  gridtest_cpu_slurm.sh  mdrun_slurm.sh  opt_perf.sh  remd_plumed_slurm.sh  remd_slurm.sh  run_trial.sh
example/modeling/: modeling.sh
example/msm/: 2d_msm.py  README.md  distance_msm_cmd.py  distance_msm_pacstk.py  distance_msm_pacstk_mdtbx.py
example/pacs/: cv_extract.sh  cv_reshape.py  trjcat.sh
example/place_solvent/: run.sh
example/remd/: demux.sh  extract_energy.sh  gen_temperatures.sh  setup_rest.sh  setup_reus_dist.sh  setup_tremd.sh
example/rest/: setup.sh
example/reus/: setup.sh
example/wham/: plot_bspmf.py  plot_hist.py  plot_pmf.py  run_wham.sh
install/: gmx.sh  install_USalign.sh  install_gmx.sh  install_obabel.sh  install_seqkit.sh  obabel.sh
install_scripts/: USalign.sh  avogadro.sh  blender.sh  dssp.sh  fftw.sh  gmx.sh  gmx_cp2k.sh  gmx_mpi.sh  gmx_mpi_plumed.sh  haddock-tools.sh  haddock3.sh  obabel.sh  opencafemol.sh  plumed.sh  seqkit.sh  termal.sh
pymol-plugins/: 8gng.cif  pyproject.toml
pymol-plugins/pymol_plugins/: __init__.py  ai.py  alias.py  arrow.py  builder.py  morph.py  pca.py  selector.py  visualizer.py
pymol_plugins/: README.md
pymol_plugins/pymol_plugins/: __init__.py
sample/gen_modres/: resp.sh
sample/gen_resp/: run.sh
sample/mdp/membrane/: eq1.mdp  eq2.mdp  eq5.mdp
sample/mdp/solution/: eq3.mdp  eq4.mdp  pacsmd.mdp  prd.mdp
sample/mdrun/: gridtest_cpu_slurm.sh  mdrun_slurm.sh
sample/msm/: 2d_msm.py  README.md  distance_msm.py  distance_msm_cmd.py  distance_msm_pacstk.py  distance_msm_pacstk_mdtbx.py
sample/pacs/: cv_extract.sh  cv_reshape.py
src/: __init__.py  __main__.py  cli.py  config.py  logger.py
src/analysis/: extract_ave_str.py  extract_str.py
src/builder/: README.md  gen_sample.py  gen_sample_builder.py  gen_sample_mdp.py
src/builder/membrane/: eq5.mdp  sample_membrane_builder.sh  step3_equilibration.mdp  step4_equilibration.mdp  step6.0_minimization.mdp  step6.1_equilibration.mdp  step6.6_equilibration.mdp  step7_production.mdp
src/cv/: comdist.py  comvec.py  contactmap.py  densmap.py  distmap.py  mindist.py  pca.py  rmsd.py  rmsf.py  xyz.py
src/msm/: gen_sample.py
src/simulator/: gen_sample.py  sample_mdrun_slurm.sh  sample_run.sh
src/trajectory/: fit.py  opt_perf.py  pacs_trjcat.py  print_perf.py  trjcat.py
src/utils/: add_ndx.py  addace.py  addh.py  addnme.py  amb2gro.py  atom_selection_parser.py  build_membrane.py  build_solution.py  calc_ion_conc.py  centering_gro.py  cmd.py  common_args.py  convert.py  extract_ave_str.py  extract_cc.py  extract_str.py  find_bond.py  fit.py  gen_am1bcc.py  gen_distres.py  gen_modres_am1bcc.py  gen_modres_resp.py  gen_posres.py  gen_resp.py  gen_temperatures.py  gmx.py  mod_mdp.py  modeling_cf.py  mutate.py  mv_crds_mol2.py  opt_perf.py  pacs_trjcat.py  parse_top.py  partial_tempering.py  print_perf.py  proc.py  pymol_session.py  rmfile.py  shell_hook.py  show_mdtraj.py  (+4 more)
test/gen_modres/: CGX.mol2  resp.sh
tests/: conftest.py  test_cli.py
tests/fixtures/: sample.mdp  sample.top
tests/test_analysis/: test_extract_ave_str.py  test_extract_str.py
tests/test_build/: test_add_ndx.py  test_build_systems.py  test_calc_ion_conc.py  test_fill_chainname.py  test_gen_distres.py  test_gen_loop_aa.py  test_gen_posres.py  test_gen_temperatures.py  test_mutate.py  test_place.py
tests/test_cv/: test_comdist.py  test_comvec.py  test_contactmap.py  test_densmap.py  test_distmap.py  test_mindist.py  test_pca.py  test_rmsd.py  test_rmsf.py  test_xyz.py
tests/test_pymol_plugins/: test_pca.py
tests/test_trajectory/: test_fit.py  test_opt_perf.py  test_pacs_trjcat.py  test_print_perf.py
tests/test_utils/: test_atom_selection_parser.py  test_cmd.py  test_mod_mdp.py  test_parse_top.py  test_partial_tempering.py  test_rmfile.py  test_shell_hook.py  test_show_npy.py
(+9 files in other folders)
