[project]
name = "mdtbx"
version = "0.1.0"
description = "ToolBox for MD simulation"
readme = "README.md"
requires-python = "==3.10"
dependencies = []

[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
pymol-open-source = "==3.1.0"
rdkit = "*"
mdtraj = "==1.9.9"
ambertools = "*"
gromacs = "*"
openbabel = "*"
seqkit = "*"
usalign = "*"

[tool.pixi.pypi-dependencies]
mdtbx = { path = ".", editable = true }
# pacs = { path = "/path/to/PaCS-Toolkit", editable = true }
pacs = { git = "git+https://github.com/KitaoLab/PaCS-Toolkit.git", extras = ["all"] }
deeptime = "==0.4.4"
matplotlib = "*"
numpy = "*"
polars = { version = "*", extras = ["all"] }
pandas = "*"
jupyterlab = "*"
seaborn = "*"
scipy = "*"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
mdtbx = "src.__main__:main"
