[project]
name = "mdtbx"
version = "0.1.0"
description = "ToolBox for MD simulation"
readme = "README.md"
requires-python = "==3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
mdtbx = "src.__main__:main"

[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.dependencies]
pymol-open-source = "==3.1.0"
rdkit = "*"
mdtraj = "==1.9.9"
ambertools = "*"
gromacs = "*"
openbabel = "*"
seqkit = "*"
usalign = "*"
acpype = "*"

[tool.pixi.pypi-dependencies]
mdtbx = { path = ".", editable = true }
# pacs = { path = "/path/to/PaCS-Toolkit", editable = true }
pacs = { git = "git+https://github.com/KitaoLab/PaCS-Toolkit.git", extras = ["all"] }
tmplot = { git = "git+https://github.com/th2ch-g/tmplot.git" }
mmterm = { git = "git+https://github.com/jgreener64/mmterm.git" }
treon = "*"
deeptime = "==0.4.4"
matplotlib = "*"
numpy = "*"
polars = { version = "*", extras = ["all"] }
pandas = "*"
jupyterlab = "*"
seaborn = "*"
scipy = "*"

[tool.pixi.tasks]
docker_build = "docker build -t mdtbx ."
jupyter_remote = "jupyter lab --no-browser --port=8889" # ssh -N -L localhost:8888:localhost:8889 HOST1 && open http://localhost:8888
