[project]
name = "mdtbx"
version = "0.1.0"
description = "ToolBox for MD simulation"
readme = "README.md"
requires-python = "==3.10"
# requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
mdtbx = "src.__main__:main"

[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.marimo.package_management]
manager = "pixi"

[tool.marimo.save]
autosave = "after_delay"
autosave_delay = 1000
format_on_save = true

[tool.marimo.ai]
rules = "- prefer polars over pandas\n- make charts using altair"

[tool.pixi.dependencies]
pymol-open-source = "==3.1.0"
mdtraj = "==1.9.9" # https://github.com/ParmEd/ParmEd/pull/1387
# mdtraj = "==1.11.0"
deeptime = "==0.4.4"
ambertools = "*"
gromacs = "*"
openbabel = "*"
seqkit = "*"
usalign = "*"
acpype = "*"
mafft = "*"
aliview = "*"
maxit = "*"

[tool.pixi.pypi-dependencies]
mdtbx = { path = ".", editable = true }
pymol_plugins = { path = "./pymol-plugins", editable = true }
mmterm = { git = "git+https://github.com/jgreener64/mmterm.git" }
rdkit = "*"
py3Dmol = "*"
py2Dmol = "*"
MDAnalysis = "*"
treon = "*"
matplotlib = "*"
numpy = "*"
polars = { version = "*", extras = ["all"] }
pandas = "*"
jupyterlab = "*"
jupytext = "*"
marimo = { version = "*", extras = ["recommended"] } # available if python >= 3.12?
seaborn = "*"
scipy = "*"
optuna = "*"
scikit-learn = "*"
ruff = "*"
setuptools = "<81" # for mdtraj 1.9.9

[tool.pixi.tasks]
update = "git pull && pixi install"
docker_build = "docker build -t mdtbx ."
jupyter_remote = "jupyter lab --no-browser --port=8889" # ssh -N -L localhost:8888:localhost:8889 HOST1 && open http://localhost:8888
ruff-format = "ruff format --force-exclude"
ruff-lint = "ruff check --fix --exit-non-zero-on-fix --force-exclude"
r = { cmd = "echo OK", depends-on = ["ruff-format", "ruff-lint"] }
pymolrc = "echo \"#!/usr/bin/env python3\nimport sys; import os; sys.path.append(os.path.expanduser('\"$(pwd)/pymol-plugins/\"')); import pymol_plugins; from pymol_plugins import *;\" > $HOME/.pymolrc"
