[project]
name = "pymol_plugins"
version = "0.1.0"
description = "Plugings for PyMOL"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pixi.project]
channels = ["conda-forge", "bioconda"]
platforms = ["linux-64", "osx-arm64", "osx-64"]

[tool.pixi.dependencies]
pymol-open-source = "==3.1.0"

[tool.pixi.pypi-dependencies]
pymol_plugins = { path = ".", editable = true }
